# podiumscan

./: .gitignore  AGENTS.md  Makefile  README.md  booklet-model-updater  booklet-reader  config.example.yaml  podiumscan-read  podiumscan-update-models  pyproject.toml  requirements.txt
booklet_reader/: cache.py  config.py  converter.py  dependencies.py  llm.py  model_updater.py  prompt.py
docs/superpowers/plans/: 2026-04-02-booklet-reader.md  2026-04-02-caching.md  2026-04-02-llm-output-handling.md
docs/superpowers/specs/: 2026-04-02-booklet-reader-design.md  2026-04-02-caching-design.md  2026-04-02-llm-output-handling-design.md
podiumscan/: cache.py  cli.py  converter.py  gaps.py  llm.py  update_models.py
tests/: test_cache.py  test_config.py  test_converter.py  test_dependencies.py  test_gaps.py  test_llm.py  test_model_updater.py  test_prompt.py
